# canonical-landscape-mcp

./: CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  EXAMPLES.md  LICENSE  QUALITY_IMPROVEMENTS.md  QUICKSTART.md  README.md  SECURITY.md  TESTING.md  deploy-http.sh  glama.json  install.sh  landscape_machines_dashboard.py  landscape_mcp.py  mcp_http.py  pyproject.toml  requirements-http.txt  requirements.txt  setup.py  test-http.sh  test-install.sh  test-mcp-server.sh
tests/: __init__.py  conftest.py  test_prompts.py  test_resources.py  test_tools.py
