[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landscape-mcp-server"
version = "1.0.0"
description = "Model Context Protocol server for Canonical Landscape infrastructure management with AI-powered analysis"
authors = [{name = "Landscape MCP Contributors"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["landscape", "mcp", "ubuntu", "debian", "system-management", "infrastructure", "monitoring", "claude-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp==1.24.0",
    "landscape-api-py3==0.9.0",
    "requests==2.32.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
dev = [
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "bandit>=1.7.0",
]
all = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "bandit>=1.7.0",
]

[project.scripts]
landscape-mcp = "landscape_mcp:main"

[project.urls]
Homepage = "https://github.com/yourusername/landscape-mcp"
Repository = "https://github.com/yourusername/landscape-mcp"
Issues = "https://github.com/yourusername/landscape-mcp/issues"
Documentation = "https://github.com/yourusername/landscape-mcp#readme"

[tool.setuptools]
py-modules = ["landscape_mcp"]
